<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bk_login"
    tools:context="nx.kernnel.dash.login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_logo">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_map_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:typeface="normal"
            android:textSize="40dp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/tvLogoName"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:typeface="normal"
        android:textSize="20dp"
        android:id="@+id/tvLogin"
        android:layout_below="@+id/layout_logo"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginTop="33dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etLogin"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/tvLogin"
        android:layout_alignStart="@+id/tvLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:typeface="normal"
        android:textSize="20dp"
        android:id="@+id/tvPassword"
        android:layout_above="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginBottom="24dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_gravity="bottom"
        android:layout_marginBottom="49dp"
        android:layout_above="@+id/btAcess"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:textAppearanceSmall"
        android:background="@drawable/button_rounded"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access"
        android:id="@+id/btAcess"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp" />


</RelativeLayout>
