<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/bk_login"
    tools:context="nx.kernnel.dash.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_account_box_black_24dp"
            android:layout_weight="0.14" />

        <TextView
            android:id="@+id/profile_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/datanasc_label" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User name"
            android:layout_marginLeft="10dp"
            android:layout_above="@+id/datanasc_label"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/datanasc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_nasc"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/name_label"
            android:layout_alignStart="@+id/sexo_label" />

        <TextView
            android:id="@+id/datanasc_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01/01/2016"
            android:layout_marginLeft="10dp"
            android:layout_alignBottom="@+id/datanasc_label"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/sexo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/datanasc_label"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/sexo_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/sexo_label"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/sexo_label"
            android:layout_alignEnd="@+id/name_label" />

        <TextView
            android:id="@+id/email_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="usuario@email.com"
            android:layout_marginLeft="10dp"
            android:layout_alignBottom="@+id/email_label"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/dash_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_public_black_24dp"
            android:layout_marginTop="46dp"
            android:layout_below="@+id/email_label"
            android:layout_alignStart="@+id/email_label" />
    </RelativeLayout>


</RelativeLayout>